# Health_track_AI

./: .replit  README.md  app.py  pyproject.toml  replit.md
api/: database.py  genai.py  main.py  recommender.py
attached_assets/: Pasted-Got-it-you-want-a-single-full-prompt-that-you-can-paste-into-Replit-AI-so-it-knows-exac-1758228679734_1758228679737.txt
dashboard/: app.py
data/: fitness_data.csv
ml/: fitness_model.pkl  train_model.py
ml/data/: fitness_data.csv
ml/ml/: fitness_model.pkl
